# projectctl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  \  db.cpp  db.h  go.mod  main.cpp  project.cpp  project.h
database/: main.go
include/: db.hpp  project.hpp
projects/: main.go  main_test.go
sql/: create_projects.sql
src/: db.cpp  project.cpp
tests/: test_db.cpp  test_project.cpp
